--- a/clock.html
+++ b/clock.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Clock</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
 </head>
+
 <body>
-    <h2>Time: </h2>
-    
+    <div id="MyClockDisplay" class="clock"></div>
+    <div id="hour"></div>:
+    <div id="minute"></div>:
+    <div id="second"></div>
 </body>
+<script src="main.js"></script>
+
 </html>
